examples/invalid/comment-event-domain-mismatch/src/php/CheckoutService.php
<?php

/**
 * @arch.node event order-placed-event
 * @arch.name Order Placed Event
 * @arch.domain orders
 * @arch.owner team-commerce
 * @event.id order.placed
 * @event.role definition
 * @event.domain billing
 * @event.owner team-commerce
 */
final class CheckoutService
{
}
